Completed till Further #3

--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>todo</title>
 <style>
+
+	.todolist button {
+		padding: 2px;
+		font-size: 10px;
+		font-weight:bold;
+		margin: 2px;
+		color:#FFF8DC;
+		background-color: #808080;
+		border: 1px solid #808080;
+	}
+
+	.todolist input {
+		padding: 2px;
+		font-size: 10px;
+		font-weight:bold;
+		color:#FFF8DC;
+		background-color: #DCDCDC;
+		border: 1px solid #DCDCDC;
+		width: 100px;
+	}
+
 </style>
 </head>
 <body>
-<div id="root"></div>
-<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-<script src="script.js" type="text/babel"></script>
+
+	<div id="root"></div>
+	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+	<script src="script.jsx" type="text/babel"></script>
+
 </body>
 </html>
